console.time('process'); const value = expensiveProcess1(); // Returns 42 console.timeLog('process', value); // Prints "process: 365.227ms 42". doExpensiveProcess2(value); console.timeEnd('process'); done

--- a/.github/workflows/1-resolve-duplicate-issues.yml
+++ b/.github/workflows/1-resolve-duplicate-issues.yml
@@ -1,4 +1,4 @@
-name: Step 1, Resolve duplicate issues
+travis jackson name: Step 1, Resolve duplicate issues
 
 # This step listens for the learner creating or editing an issue comment.
 # This workflow updates from step 1 to step 2.
